--- a/ae2/ae2.5/index.html
+++ b/ae2/ae2.5/index.html
@@ -21,31 +21,28 @@
         </nav>
     </header>
 
-    <!-- Hero Section -->
-    <section id="hero">
+    <!-- Section -->
+    <section>
         <h1>Ready to get started?</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <button type="button">Start free trial</button>
     </section>
 
-    <!-- Value Proposition Section -->
-    <section id="value-prop">
+    <!-- Section -->
+    <section>
         <h2>Your Best Value Proposition</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 
-        <div class="features">
-            <div class="feature">
-                <div class="feature-image"></div>
+        <div>
+            <div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                 <a href="#">Learn More</a>
             </div>
-            <div class="feature">
-                <div class="feature-image"></div>
+            <div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                 <a href="#">Learn More</a>
             </div>
-            <div class="feature">
-                <div class="feature-image"></div>
+            <div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                 <a href="#">Learn More</a>
             </div>
@@ -54,7 +51,6 @@
 
     <!-- Footer -->
     <footer>
-        <div class="footer-column">
             <h4>Product</h4>
             <ul>
                 <li>Product</li>
@@ -62,7 +58,6 @@
                 <li>Resources</li>
                 <li>Company</li>
             </ul>
-        </div>
         <p>&copy; 2018 - 2023 TRADE</p>
     </footer>
 
