--- a/ae2/ae2.2/ae2_2.html
+++ b/ae2/ae2.2/ae2_2.html
@@ -12,8 +12,9 @@
     <form action="#" method="post">
         <!-- Información Personal -->
         <fieldset>
+            <!-- fieldset Etiqueta que agrupa elementos relacionados de un formulario -->
             <legend>Información Personal</legend>
-
+            <!-- legend sirve para poner un título a cada grupo de elementos -->
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre">
 
