--- a/ae2/ae2.12/index.html
+++ b/ae2/ae2.12/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú Vertical con Estilos</title>
+    <title>AE2.12</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
