--- a/ae2/ae2.17/index.html
+++ b/ae2/ae2.17/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>FP Informática y Comunicaciones</title>
+    <title>AE 2.17</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
