--- a/ae2/ae2.19/index.html
+++ b/ae2/ae2.19/index.html
@@ -10,11 +10,11 @@
     <h1>Lista de alimentos</h1>
 
     <ul>
-        <li data-tipo="fruta">Manzana</li>
-        <li data-tipo="fruta">Plátano</li>
-        <li data-tipo="verdura">Lechuga</li>
-        <li data-tipo="verdura">Zanahoria</li>
-        <li data-tipo="carne">Pollo</li>
+        <li type="fruta">Manzana</li>
+        <li type="fruta">Plátano</li>
+        <li type="verdura">Lechuga</li>
+        <li type="verdura">Zanahoria</li>
+        <li type="carne">Pollo</li>
     </ul>
 
 </body>
