cambios en los colores de los botones y arreglado el navbar

--- a/ae2/ae2.20/secundaria.html
+++ b/ae2/ae2.20/secundaria.html
@@ -7,19 +7,17 @@
     <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 <body>
-    <header class="main-header">
-        <div class="logo">
-            <a href="index.html"><img src="imagenes/newlogo_2.png" alt="Logo Corporativo"></a>
-        </div>
-        <nav class="main-nav">
-            <a href="#menu">Menú</a>
+   <header class="main-header">
+    <div class="logo">
+        <a href="index.html"><img src="imagenes/newlogo_2.png" alt="Logo Corporativo"></a>
+        <div class="menu">
+            <a href="index.html">Menú</a>
             <a href="#vinos">Carta de Vinos</a>
             <a href="#contacto">Contacto y Reservas</a>
-        </nav>
-    </header>
-
+        </div>
+    </div>
+</header>
    <main class="content">
-
     <!-- MENÚ -->
     <section id="menu" class="section-box">
         <h2>Menú</h2>
