--- a/ae2/ae2.20/index.html
+++ b/ae2/ae2.20/index.html
@@ -10,6 +10,11 @@
     <header class="main-header">
         <div class="logo">
             <a href="index.html"><img src="imagenes/newlogo_2.png" alt="Logo Corporativo"></a>
+            <div class="menu">
+                <a href="#">Menú</a>
+                <a href="#">Carta de vinos</a>
+                <a href="#">Contacto y reservas</a>
+            </div>
         </div>
     </header>
 
