--- a/ae2/ae2.20/secundaria.html
+++ b/ae2/ae2.20/secundaria.html
@@ -12,56 +12,190 @@
         <a href="index.html"><img src="imagenes/newlogo_2.png" alt="Logo Corporativo"></a>
         <div class="menu">
             <a href="index.html">Menú</a>
-            <a href="#vinos">Carta de Vinos</a>
+            <a href="vino.html">Carta de Vinos</a>
             <a href="#contacto">Contacto y Reservas</a>
         </div>
     </div>
 </header>
    <main class="content">
     <!-- MENÚ -->
-    <section id="menu" class="section-box">
-        <h2>Menú</h2>
-        <div class="platos-container">
-            <!-- 5 Entrantes fríos -->
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>5€</span></div>
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>6€</span></div>
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>5€</span></div>
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>7€</span></div>
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>5€</span></div>
-
-            <!-- 6 Raciones -->
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>8€</span></div>
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>9€</span></div>
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>7€</span></div>
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>8€</span></div>
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>9€</span></div>
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>10€</span></div>
-
-            <!-- 4 Platos principales -->
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>12€</span></div>
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>13€</span></div>
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>14€</span></div>
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>15€</span></div>
-
-            <!-- 3 Postres -->
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>6€</span></div>
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>7€</span></div>
-            <div class="plato"><div class="imagen"></div><p>Lorem Ipsum</p><span>8€</span></div>
+   <section id="menu" class="section-box">
+    <h2>Entrantes fríos</h2>
+    <div class="platos-container">
+        <div class="plato">
+            <img src="imagenes/totas_canapés.jpg" alt="">
+            <p>Tostas y canapés</p>
+            <span>5€</span>
         </div>
-    </section>
-
-    <!-- CARTA DE VINOS -->
-    <section id="vinos" class="section-box">
-        <h2>Carta de Vinos</h2>
-        <div class="vinos-container">
-            <div class="vino"><div class="imagen"></div><p>Rioja 1 - 12€</p></div>
-            <div class="vino"><div class="imagen"></div><p>Rioja 2 - 14€</p></div>
-            <div class="vino"><div class="imagen"></div><p>Ribera del Duero 1 - 13€</p></div>
-            <div class="vino"><div class="imagen"></div><p>Ribera del Duero 2 - 15€</p></div>
-            <div class="vino"><div class="imagen"></div><p>Blanco Espumoso 1 - 10€</p></div>
-            <div class="vino"><div class="imagen"></div><p>Blanco Espumoso 2 - 11€</p></div>
+        <div class="plato">
+            <img src="imagenes/hojaldres.jpg" alt="">
+            <p>Hojaldres</p>
+            <span>5€</span>
         </div>
-    </section>
+        <div class="plato">
+            <img src="imagenes/bagna_cauda.jpg" alt="">
+            <p>Bagna cauda</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/ensaladajpeg.jpeg" alt="">
+            <p>Ensalada de endivias, surimi y salsa roquefort</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/tomate.jpg" alt="">
+            <p>Tomates rellenos de aguacate y huevos</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/tomate.jpg" alt="">
+            <p>Tomates rellenos de aguacate y huevos</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/tomate.jpg" alt="">
+            <p>Tomates rellenos de aguacate y huevos</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/tomate.jpg" alt="">
+            <p>Tomates rellenos de aguacate y huevos</p>
+            <span>5€</span>
+        </div>
+    </div>
+
+    <h2>Raciones</h2>
+    <div class="platos-container">
+        <div class="plato">
+            <img src="imagenes/boquerones.jpg" alt="">
+            <p>Boquerones</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/calamares.jpg" alt="">
+            <p>Calamares</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/gambas.jpg" alt="">
+            <p>Gambas al ajillo</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/croquetas.jpg" alt="">
+            <p>Croquetas</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/mejillones.jpg" alt="">
+            <p>Mejillones</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/coquinas.jpg" alt="">
+            <p>Coquinas a la marinera</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/coquinas.jpg" alt="">
+            <p>Coquinas a la marinera</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/coquinas.jpg" alt="">
+            <p>Coquinas a la marinera</p>
+            <span>5€</span>
+        </div>
+    </div>
+
+    <h2>Platos principales</h2>
+    <div class="platos-container">
+        <div class="plato">
+            <img src="imagenes/tortilla.jpg" alt="">
+            <p>Tortilla</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/cocido.jpg" alt="">
+            <p>Cocido</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/paella.jpg" alt="">
+            <p>Paella</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/fabada.jpg" alt="">
+            <p>Fabada</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/fabada.jpg" alt="">
+            <p>Fabada</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/fabada.jpg" alt="">
+            <p>Fabada</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/fabada.jpg" alt="">
+            <p>Fabada</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/fabada.jpg" alt="">
+            <p>Fabada</p>
+            <span>5€</span>
+        </div>
+    </div>
+
+    <h2>Postres</h2>
+    <div class="platos-container">
+        <div class="plato">
+            <img src="imagenes/queso.jpg" alt="">
+            <p>Fabada</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/queso.jpg" alt="">
+            <p>Fabada</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/queso.jpg" alt="">
+            <p>Fabada</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/queso.jpg" alt="">
+            <p>Fabada</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/queso.jpg" alt="">
+            <p>Fabada</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/queso.jpg" alt="">
+            <p>Fabada</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/queso.jpg" alt="">
+            <p>Fabada</p>
+            <span>5€</span>
+        </div>
+        <div class="plato">
+            <img src="imagenes/queso.jpg" alt="">
+            <p>Fabada</p>
+            <span>5€</span>
+        </div>
+    </div>
+</section>
 
     <!-- CONTACTO Y RESERVAS -->
     <section id="contacto" class="section-box">
