--- a/ae2/ae2.20/index.html
+++ b/ae2/ae2.20/index.html
@@ -12,7 +12,7 @@
             <a href="index.html"><img src="imagenes/newlogo_2.png" alt="Logo Corporativo"></a>
             <div class="menu">
                 <a href="#">Menú</a>
-                <a href="#">Carta de vinos</a>
+                <a href="vino.html">Carta de vinos</a>
                 <a href="#">Contacto y reservas</a>
             </div>
         </div>
