añadida la pag de contacto

--- a/ae2/ae2.20/index.html
+++ b/ae2/ae2.20/index.html
@@ -11,9 +11,9 @@
         <div class="logo">
             <a href="index.html"><img src="imagenes/newlogo_2.png" alt="Logo Corporativo"></a>
             <div class="menu">
-                <a href="#">Menú</a>
+                <a href="secundaria.html">Comida</a>
                 <a href="vino.html">Carta de vinos</a>
-                <a href="#">Contacto y reservas</a>
+                <a href="contacto.html">Contacto y reservas</a>
             </div>
         </div>
     </header>
