--- a/ae2/ae2.20/vino.html
+++ b/ae2/ae2.20/vino.html
@@ -11,9 +11,9 @@
         <div class="logo">
             <a href="index.html"><img src="imagenes/newlogo_2.png" alt="Logo Corporativo"></a>
             <div class="menu">
-                <a href="index.html">Menú</a>
+                <a href="secundaria.html">Comida</a>
                 <a href="#vinos">Carta de Vinos</a>
-                <a href="#contacto">Contacto y Reservas</a>
+                <a href="contacto.html">Contacto y Reservas</a>
             </div>
         </div>
     </header>
