--- a/ae2/ae2.20/secundaria.html
+++ b/ae2/ae2.20/secundaria.html
@@ -11,9 +11,9 @@
     <div class="logo">
         <a href="index.html"><img src="imagenes/newlogo_2.png" alt="Logo Corporativo"></a>
         <div class="menu">
-            <a href="index.html">Menú</a>
+            <a href="#secundaria">Comida</a>
             <a href="vino.html">Carta de Vinos</a>
-            <a href="#contacto">Contacto y Reservas</a>
+            <a href="contacto.html">Contacto y Reservas</a>
         </div>
     </div>
 </header>
@@ -196,37 +196,6 @@
         </div>
     </div>
 </section>
-
-    <!-- CONTACTO Y RESERVAS -->
-    <section id="contacto" class="section-box">
-        <h2>Contacto y Reservas</h2>
-        <div class="contact-container">
-            <div class="mapa">
-                <iframe src="https://www.google.com/maps/embed?..." width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
-            <form class="reserva-form">
-                <label>Nombre: <input type="text" required></label>
-                <label>Email: <input type="email" required></label>
-                <label>Teléfono: <input type="tel" required></label>
-                <label>Fecha: <input type="date" required></label>
-                <label>Hora: <input type="time" required></label>
-                <label>Número de personas:
-                    <select required>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                        <option value="8">8</option>
-                    </select>
-                </label>
-                <button type="submit">Reservar</button>
-            </form>
-        </div>
-    </section>
-
 </main>
 
 
